SDKs/apideck.com/file-storage/8.85.0/go/README.md
# openapi

<!-- Start SDK Installation -->
## SDK Installation

```bash
go get openapi
```
<!-- End SDK Installation -->

## SDK Example Usage
<!-- Start SDK Example Usage -->
```go
package main

import (
    "openapi"
    "openapi/pkg/models/shared"
    "openapi/pkg/models/operations"
)

func main() {
    opts := []sdk.SDKOption{
        sdk.WithSecurity(
            shared.Security{
                APIKey: shared.SchemeAPIKey{
                    APIKey: "YOUR_API_KEY_HERE",
                },
            }
        ),
    }

    s := sdk.New(opts...)
    
    req := operations.DriveGroupsAddRequest{
        Security: operations.DriveGroupsAddSecurity{
            APIKey: shared.SchemeAPIKey{
                APIKey: "YOUR_API_KEY_HERE",
            },
        },
        QueryParams: operations.DriveGroupsAddQueryParams{
            Raw: true,
        },
        Headers: operations.DriveGroupsAddHeaders{
            XApideckAppID: "deleniti",
            XApideckConsumerID: "ut",
            XApideckServiceID: "corporis",
        },
        Request: shared.DriveGroupInput{
            Description: "enim",
            DisplayName: "quia",
            Name: "autem",
        },
    }
    
    res, err := s.DriveGroups.DriveGroupsAdd(ctx, req)
    if err != nil {
        log.Fatal(err)
    }

    if res.CreateDriveGroupResponse != nil {
        // handle response
    }
```
<!-- End SDK Example Usage -->

<!-- Start SDK Available Operations -->
## SDK Available Operations

### Drive Groups

* `DriveGroupsAdd` - Create DriveGroup
* `DriveGroupsAll` - List DriveGroups
* `DriveGroupsDelete` - Delete DriveGroup
* `DriveGroupsOne` - Get DriveGroup
* `DriveGroupsUpdate` - Update DriveGroup

### Drives

* `DrivesAdd` - Create Drive
* `DrivesAll` - List Drives
* `DrivesDelete` - Delete Drive
* `DrivesOne` - Get Drive
* `DrivesUpdate` - Update Drive

### Files

* `FilesAll` - List Files
* `FilesDelete` - Delete File
* `FilesDownload` - Download File
* `FilesOne` - Get File
* `FilesSearch` - Search Files

### Folders

* `FoldersAdd` - Create Folder
* `FoldersCopy` - Copy Folder
* `FoldersDelete` - Delete Folder
* `FoldersOne` - Get Folder
* `FoldersUpdate` - Rename or move Folder

### Shared Links

* `SharedLinksAdd` - Create Shared Link
* `SharedLinksAll` - List SharedLinks
* `SharedLinksDelete` - Delete Shared Link
* `SharedLinksOne` - Get Shared Link
* `SharedLinksUpdate` - Update Shared Link

### Upload Sessions

* `UploadSessionsAdd` - Start Upload Session
* `UploadSessionsDelete` - Abort Upload Session
* `UploadSessionsFinish` - Finish Upload Session
* `UploadSessionsOne` - Get Upload Session
* `UploadSessionsUpload` - Upload part of File to Upload Session

<!-- End SDK Available Operations -->

### SDK Generated by [Speakeasy](https://docs.speakeasyapi.dev/docs/using-speakeasy/client-sdks)
